--- a/test/fixtures/users.yml
+++ b/test/fixtures/users.yml
@@ -1,1 +1,4 @@
-# Read about fixtures at http://api.rubyonrails.org/classes/ActiveRecord/FixtureSet.html
+juli:
+  name: Juliana
+  email: juli@example.com
+  password_digest: <%= User.digest('password') %>
