--- a/test/fixtures/users.yml
+++ b/test/fixtures/users.yml
@@ -2,8 +2,21 @@ juli:
   name: Juliana
   email: juli@example.com
   password_digest: <%= User.digest('password') %>
+  admin: true
 
 michael:
   name: Michael
   email: michael@example.com
-  password_digest: <%= User.digest('password') %> 
+  password_digest: <%= User.digest('password') %>
+
+zach:
+  name: Zachary
+  email: zach@example.com
+  password_digest: <%= User.digest('password') %>
+
+<% 30.times do |n| %>
+user_<%= n %>:
+  name:  <%= "User#{n}" %>
+  email: <%= "user-#{n}@example.com" %>
+  password_digest: <%= User.digest('password') %>
+<% end %>
