--- a/test/fixtures/users.yml
+++ b/test/fixtures/users.yml
@@ -3,20 +3,25 @@ juli:
   email: juli@example.com
   password_digest: <%= User.digest('password') %>
   admin: true
+  activated: true
+  activated_at: <%= Time.zone.now %>
 
 michael:
   name: Michael
   email: michael@example.com
   password_digest: <%= User.digest('password') %>
+  activated_at: <%= Time.zone.now %>
 
 zach:
   name: Zachary
   email: zach@example.com
   password_digest: <%= User.digest('password') %>
+  activated_at: <%= Time.zone.now %>
 
 <% 30.times do |n| %>
 user_<%= n %>:
   name:  <%= "User#{n}" %>
   email: <%= "user-#{n}@example.com" %>
   password_digest: <%= User.digest('password') %>
+  activated_at: <%= Time.zone.now %>
 <% end %>
